css/src/group.css
/** Group **/

.cmb_metabox .CMB_Group_Field > .field-title {
	font-size: 16px;
	clear: left;
	color: #222;
	font-family: 'Open Sans', sans-serif;
	font-weight: normal;
	margin: 8px 0 16px;
}

.cmb_metabox .CMB_Group_Field.repeatable > .field-item {
	padding: 33px 10px 0;
	margin-bottom: 16px;
	border: 1px solid #DDD;
	background: #FAFAFA;
	position: relative;
}

.cmb_metabox .CMB_Group_Field.repeatable > .field-item:before {
	content: ' ';
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	height: 33px;
	border-bottom: 1px solid #DDDDDD;
}

.cmb_metabox .CMB_Group_Field.repeatable > .field-item > .cmb-delete-field {
	top: 5px;
	right: 5px;
	width: auto;
	text-indent: 0;
	padding-left: 24px;
	padding-right: 8px;
	height: 22px;
	line-height: 20px;
	font-size: 11px;
	z-index: 1;
}

.cmb_metabox .CMB_Group_Field.repeatable .cmb-collapse-field {
	display: inline-block;
	text-decoration: none;
	font-size: 11px;
	line-height: 20px;
	height: 22px;
	width: 22px;
	margin: 0;
	padding: 0;
	cursor: pointer;
	border-width: 1px;
	border-style: solid;
	border-color: transparent;
	-webkit-appearance: none;
	border-radius: 3px;
	white-space: nowrap;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	color: #555;
	background: transparent;
	-webkit-box-shadow: none;
	box-shadow: none;
	vertical-align: top;
	position: absolute;
	top: 3px;
	right: 0;
	text-indent: 100%;
	overflow: hidden;
	white-space: nowrap;
	top: 5px;
	left: 5px;
	z-index: 1;
	width: auto;
	text-indent: 0;
	padding-left: 5px;
}

.cmb_metabox .CMB_Group_Field.repeatable .cmb-collapse-field:focus {
	outline: none;
}

.cmb_metabox .CMB_Group_Field.repeatable > .field-item > .cmb-delete-field .cmb-delete-field-icon {
	left: 12px;
}


.CMB_Group_Field.cmb-sortable > .field-item {
	position: relative;
	padding-top: 30px;
}

.CMB_Group_Field.cmb-sortable > .field-item > .cmb-handle {
	top: -1px;
	left: -1px;
	right: -1px;
	height: 34px;
	width: auto;
	border: none;
	border-bottom: 1px solid #DDDDDD;
}

.CMB_Group_Field.cmb-sortable > .field-item.ui-sortable-helper > .cmb-handle {
	padding: 0 5px;
}

.cmb_metabox .CMB_Group_Field.repeatable.cmb-sortable > .field-item:before {
	display: none !important;
}

.CMB_Group_Field.cmb-sortable > .ui-sortable-placeholder {
	margin-bottom: 16px !important;
}

